[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"


[project]
name = "proxyhopper-dispatcher"
description = "Server for dispatching proxied HTTP requests"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "aiohttp~=3.12.7",
    "pydantic~=2.11.5",
    "pyyaml~=6.0.2",
    "click~=8.2.01"
    ]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../../"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/proxyhopper_dispatcher"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-aiohttp",
]

[tool.hatch.envs.hatch-test.env-vars]
PYTHONPATH = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
proxyhopper = "proxyhopper_dispatcher.cli:cli"
