[build-system]
requires = [
  "hatchling",
  "hatch-vcs"
]
build-backend = "hatchling.build"


[project]
name = "proxyhopper"
description = "Python client for dispatching requests via rotating proxies"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "aiohttp~=3.12.7",
    "pydantic~=2.11.5",
    "tqdm>=4.48.0",
    ]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.version.raw-options]
root = "../../"
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/proxyhopper"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "proxyhopper-dispatcher @ {root:parent:uri}/proxyhopper-dispatcher",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-aiohttp",
  "proxyhopper-dispatcher @ {root:parent:uri}/proxyhopper-dispatcher",
]

[tool.hatch.envs.hatch-test.env-vars]
PYTHONPATH = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true